# CourseWork_8

./: .env.sample  Dockerfile  README.md  READMY.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habit/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_habit_time_to_complete.py  0003_alter_habit_time.py  0004_alter_habit_time.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py  0003_alter_user_tg_chat_id.py
